# home-assistant-puffco

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json
.github/: metadata.json
.github/workflows/: repo-metadata.yml  validate.yml
custom_components/puffco/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  device_action.py  device_trigger.py  entity.py  event.py  helpers.py  light.py  manifest.json  number.py  select.py  sensor.py  service_handlers.py  services.yaml  strings.json  switch.py  text.py
custom_components/puffco/_vendor/puffco_ble/: auth.py  ble_client.py  client.py  constants.py  encoding.py
custom_components/puffco/blueprints/: charging_notice.yaml  lantern_on_heat_active.yaml  session_finished_notify.yaml
custom_components/puffco/translations/: en.json
docs/: DASHBOARDS.md  DEPLOY.md  LED_NOTES.md  PREREQUISITES.md  PUBLISH.md  RELEASE_NOTES_v1.0.0.md  VALIDATION.md  dashboard-peak-pro-helpers.yaml  dashboard-peak-pro-holotape.yaml  dashboard-peak-pro-node-snippet.yaml  dashboard-peak-pro-pipboy.yaml
puffco-ble/: README.md  probe_device_led.py  pyproject.toml
puffco-ble/puffco_ble/: __init__.py  ble_client.py  buffer.py  cli.py  client.py  encoding.py  lantern_effects.py  models.py  protocol.py
puffco-ble/tests/: test_auth.py  test_encoding.py  test_protocol.py
scripts/: build_release.ps1  sync_ha_lib.ps1  sync_ha_lib.sh
