[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puffco-ble"
version = "0.1.0"
description = "Python BLE client for Puffco Peak Pro devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
puffco-cli = "puffco_ble.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["puffco_ble*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
